Fix: avatar overflow

--- a/views/components/etc/assets/avatar.css
+++ b/views/components/etc/assets/avatar.css
@@ -1,7 +1,9 @@
 .ship-avatar-container {
   align-items: center;
+  overflow: hidden;
   display: flex;
   -webkit-mask-image: -webkit-gradient(linear, 65% 100%, 100% 100%, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
+  mask-image: -webkit-gradient(linear, 65% 100%, 100% 100%, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
 }
 
 .ship-avatar-loading {
